--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "dao_type": "xml",
+    "dao_type": "mysql",
     "mysql": {
         "host": "localhost",
         "user": "root",
-        "password": "rootpass",
+        "password": "",
         "database": "mi_base"
     },
     "txt": {
