new file:   DAOMY-SQL modified:   config.json modified:   dao/__pycache__/factory.cpython-312.pyc new file:   dao/__pycache__/user_dao_sql.cpython-312.pyc new file:   dao/__pycache__/user_dao_sql_server.cpython-312.pyc modified:   dao/factory.py new file:   dao/user_dao_sql_server.py modified:   main.py modified:   models/__pycache__/user.cpython-312.pyc modified:   models/user.py

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "dao_type": "mysql",
+    "dao_type": "sqlserver",
     "mysql": {
         "host": "localhost",
         "user": "root",
@@ -11,6 +11,14 @@
     },
     "xml": {
         "filepath": "usuarios.xml"
+    },
+    "sqlserver": {
+        "server": "ARIEL,1433",
+        "database": "mi_base",
+        "username": "sa",
+        "password": "171739",
+        "trusted_connection": true,
+        "driver": "ODBC Driver 17 for SQL Server"
     }
 }
 
